@@ -25,3 +25,4 @@
     li.user .admin     { background: lightblue; }
     li.user .suspended { background: gainsboro; }
     li.user .active    { background: lightgreen; }
+    li.user .signed_up { background: lightsalmon; }
