@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sat, Aug 21, 2009
+---------------------------------------------------------------------
+- Implemented :needs_approval setting for user signups.
+
 Fri, Aug 20, 2009
 ---------------------------------------------------------------------
 - Added new :user_signup setting (see config/settings.yml).
